--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
         compose_version = '1.1.1'
+        coroutine_version='1.6.4'
+        retrofit_version='2.9.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
