--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.qmk.musiccontroller'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.qmk.musiccontroller"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -72,4 +72,10 @@ dependencies {
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.1.0-alpha01"
 
+    // Tabs Layout
+    implementation "com.google.accompanist:accompanist-pager:0.25.0"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.25.0"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 }
