Implemented multi-module architecture and migrated to kotlin-dsl.

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,22 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Music Controller"
 include ':app'
+include ':core'
+include ':core:core_domain'
+include ':core:core_data'
+include ':core:core_presentation'
+include ':playlist'
+include ':music'
+include ':naming_rule'
+include ':music_manager'
+include ':onboarding'
+include ':channel'
+include ':setting'
+include ':channel:channel_presentation'
+include ':music_manager:music_manager_data'
+include ':music_manager:music_manager_domain'
+include ':music:music_presentation'
+include ':naming_rule:naming_rule_presentation'
+include ':onboarding:onboarding_presentation'
+include ':playlist:playlist_presentation'
+include ':setting:setting_presentation'
