--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation Compose.material
     implementation Compose.runtime
     implementation Compose.navigation
-    implementation Compose.viewModelCompose
+//    implementation Compose.viewModelCompose
     implementation Compose.activityCompose
 
     kapt DaggerHilt.hiltCompiler
